[package]
name = "gl3d-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
vulkano = "0.33"
vulkano-shaders = "0.33"
vulkano-util = "0.33"
vulkano-win = "0.33"
winit = "0.28"

# From Vulkano's tutorial : You may want to consider adding the following minimum optimization level to your Cargo.toml as well. 
# The purpose of this is to reduce performance artifacts resulting from the default debug optimization.
[profile.dev]
opt-level = 1 